msg/async: bug fix 23600. After listen_socket was closed, it entered the start() process magically. so I think we should make '_fd = -1' when listen_socket was closed. And  in the start process, determine the value of listen_socket, if it equal to -1, return the process

Fixes: https://tracker.ceph.com/issues/23600

Signed-off-by: shangfufei <shangfufei@inspur.com>